src/test/deca/context/invalid/classmethode5.deca
class A{
    float a;
    int methode(){
        return a;
    }
}

{
    A a=new A();
    
}